--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,7 +6,7 @@ description: "Check out my collection of published articles, blog posts, and web
 <div class="container">
   <div class="filter-wrap">
     <div class="column">
-      <h1>Portfolio</h1>
+      <h1 class="serif">Portfolio</h1>
     </div>
     <div class="column">
         <p>Below is a collection of my published work, varying from blog and article posts to web copy for businesses. Click on the links provided to see the full body of work. Although I specialize in alternative health and wellness and outdoor
