--- a/honest-to-good/index.html
+++ b/honest-to-good/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Honest to Good Blog
+title: Honest to Good
+subtitle: "Gear Reviews, Adventure Travel, and Mindful Living in Maine"
 description: "Honest to Good Blog"
 use_dark_main: true
 ---
