--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,32 +14,44 @@ description: "Check out my collection of published articles, blog posts, and web
           and recreation, I am open to working with new industries. <a href="/#contact"><strong>Contact me</strong></a> if you are interested in discussing your project at hand.</p>
       </div>
   </div>
-      <p class="no-margin"><strong>Filter by Category:</strong></p>
-      {% assign categories = site.data.portfolio | map: 'category' | uniq %}
-      <p class="item filter" data-filter="all">All</p>
-      {% for category in categories %}
-      <p class="item filter" data-filter=".{{ category | remove: " " | remove: "&" }}">
-        {{ category }}
-      </p>
-      {% endfor %}
 </div>
+<section class="topo-map">
 <div class="container">
-  <div class="portfolio-wrap">
-    {% assign portfolio = site.data.portfolio %}
-    {% for content in portfolio %}
-    <div class="portfolio card mix {{ content.category | remove: " "  | remove: "&" }}">
-      <a target="_blank" href="{{ content.url }}">
-        <div class="img-container" style="background-image: url({{ content.image }});">
-        </div>
-        <div class="card-content">
-          <h4 class="no-margin">{{ content.title }}</h4>
-          <small><a class="no-decoration muted" target="_blank" href="{{ content.url}}">{{ content.category }}</a></small>
-        </div>
-      </a>
+  <div class="grid">
+    <div class="grid-item">
+      <div class="filter-layout light-hero">
+        <p class="no-margin"><strong>Filter by Category:</strong></p>
+        {% assign categories = site.data.portfolio | map: 'category' | uniq %}
+        <p class="item filter" data-filter="all">All</p>
+        {% for category in categories %}
+        <p class="item filter" data-filter=".{{ category | remove: " " | remove: "&" }}">
+          {{ category }}
+        </p>
+        {% endfor %}
+      </div>
     </div>
-    {% endfor %}
+    <div class="grid-item">
+      <div class="portfolio-wrap">
+        {% assign portfolio = site.data.portfolio %}
+        {% for content in portfolio %}
+        <div class="portfolio card mix {{ content.category | remove: " "  | remove: "&" }}">
+          <a target="_blank" href="{{ content.url }}">
+            <div class="img-container" style="background-image: url({{ content.image }});">
+            </div>
+            <div class="card-content">
+              <h4 class="no-margin">{{ content.title }}</h4>
+              <small><a class="no-decoration muted" target="_blank" href="{{ content.url}}">{{ content.category }}</a></small>
+            </div>
+          </a>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
   </div>
+
+
 </div>
+</section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script>
 <script>
   var mixer = mixitup('.portfolio-wrap');
