--- a/about/index.html
+++ b/about/index.html
@@ -5,12 +5,13 @@ description: "Promote your small business by hiring a freelance copy writer who 
 hero-image: "/images/ficus.jpeg"
 ---
 <div class="text container">
-  <h2 class="small">Writer. Mindful Explorer. Lifelong Learner.</h2>
+  <h2 class="small">Writer. Lifelong Learner. Spiritual Being.</h2>
   <hr>
   <section class="tight subsection">
-    <p><strong>I’m a writer.</strong> I’ve been a writer all my life. From writing short stories as a child to majoring in English, the written word has always been of the utmost importance to me. While my work may vary, I love to write pieces that speak to the shared human experience or make way for new life perspectives.</p>
-    <p><strong>I’m a mindful explorer.</strong> I am happiest when I’m going somewhere new, whether it’s climbing a mountain summit, exploring a town I’ve never been to, or traveling to a far flung destination. I also treasure my time at home — hanging with my husband and dog, tending to my garden, reading a book by the fire, or cooking a homemade meal is what fills me up. In this way, I’m an oxymoron — a homebody with an adventurous soul.</p>
-    <p><strong>I’m a lifelong learner.</strong> One of the aspects I love most about my work is the learning never ends. When I’m writing, I’m always researching new subjects that inspire me. As a naturally curious person, I love researching new topics, diving deep into fascinating subjects, and discovering fresh perspectives about life and the world at large.</p>
-    <p>To learn even more about me, head on over to my blog, Honest to Good!</p>
+    <p><strong>I’m a writer.</strong> I’ve been a writer all my life. From writing short stories as a child to majoring in English, the written word has always been of the utmost importance to me. I try to write stories that speak to the shared human experience, and these are my favorite stories to read as well. 
+    </p>
+    <p><strong>I’m a lifelong learner.</strong> One of the aspects I love most about my work is the learning never ends. As a naturally curious person, I love researching new topics, diving deep into fascinating subjects, and discovering fresh perspectives about life and the world at large. </p>
+    <p><strong>I’m a spiritual being.</strong> I believe in magic — no, like really. I’m drawn to the rhythms of the natural world and study a range of spiritual topics including tarot and astrology. (If you’re curious — I’m a Rising Gemini, Sun in Leo, Moon in Scorpio). My side-hustle is reading natal birth charts to help people understand themselves and their place in this world. Please reach out if you’re interested in this offering, it would be my pleasure to read your chart!
+    </p>
   </section>
 </div>
