--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,7 +36,8 @@ description: "Check out my collection of published articles, blog posts, and web
         {% for content in portfolio %}
         <div class="portfolio card mix {{ content.category | remove: " "  | remove: "&" }}">
           <a target="_blank" href="{{ content.url }}">
-            <div class="img-container" style="background-image: url({{ content.image }});">
+            <div class="img-container">
+              <img src="{{ content.image }}" alt="{{ content.title }}"/>
             </div>
             <div class="card-content">
               <h4 class="no-margin">{{ content.title }}</h4>
