--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,7 +37,7 @@ description: "Check out my collection of published articles, blog posts, and web
         <div class="portfolio card mix {{ content.category | remove: " "  | remove: "&" }}">
           <a target="_blank" href="{{ content.url }}">
             <div class="img-container">
-              <img src="{{ content.image }}" alt="{{ content.title }}"/>
+              <img src="{{ content.image }}" alt="{{ content.title }}" loading="lazy"/>
             </div>
             <div class="card-content">
               <h4 class="no-margin">{{ content.title }}</h4>
