--- a/astrology/index.html
+++ b/astrology/index.html
@@ -20,7 +20,7 @@ hero-image: "/images/astrology.webp"
     <h3>Virtual Readings</h3>
     <p>For those who desire a more hands-on experience, I meet virtually with clients via Google Meets. These meetings are geared towards the clientele, with time to answer any questions they have regarding their natal chart, transits, predictions. Afterwards, clients will receive a recording of the reading.</p>
     <p><strong>Natal Chart Only</strong> - 60 minutes –$165</p>
-    <p><strong>Ahead Reading</strong> (Solar Return, Transits, Profection, Progression) - 60 minutes  -$165</p>
+    <p><strong>Year-Ahead Reading</strong> (Solar Return, Transits, Profection, Progression) - 60 minutes  -$165</p>
     <p><strong>Natal Chart and Year-Ahead Reading</strong> -  90 Minutes -$225</p>
     <p>Email <a href="mailto:jerseygriggs.writes@gmail.com">jerseygriggs.writes@gmail.com</a> to book. <strong>All bookings require a birth date, birth location, and exact birth time and pre-payment via Venmo</strong>. Reading this disclaimer is also required before booking.</p>
     <hr>
@@ -33,7 +33,6 @@ hero-image: "/images/astrology.webp"
     <p>Learning how to work with the moon cycle is one of the most powerful ways to manifest. Every month, the Full Moon teaches us to let go. As the peak of the moon cycle, Full Moons illuminate our intentions and ask us to reflect on what we need to release.</p>
     <p>A 90 minute astrology and yoga 1.5 hour workshop will honor the Full Moon and its current Zodiac sign through meditation, journal prompts, chart exploration and floor-based movement.  We will begin with a brief explanation of the current astrological chart, followed by meditation and gentle movement. Participants will then receive journal prompts, inviting them to release in a full moon ritual. The workshop will end with a yoga nidra meditation to allow participants to fully incorporate the moon’s energetic imprint. This bespoke ritual is based on the full moon’s Zodiac sign and the current astrological landscape, allowing participants to tap into the collective energy.</p>
     <p>Please bring a journal, yoga mat, and writing utensil.</p>
-    <h4>The Witch’s year – working with the Working with astrological year</h4>
     <hr>
     <h3>Disclaimer</h3>
     <p>Upon purchasing an astrological reading from Jersey Griggs, you acknowledge that you:</p>
