--- a/astrology/index.html
+++ b/astrology/index.html
@@ -24,7 +24,18 @@ hero-image: "/images/astrology.webp"
     <p><strong>Natal Chart and Year-Ahead Reading</strong> -  90 Minutes -$225</p>
     <p>Email <a href="mailto:jerseygriggs.writes@gmail.com">jerseygriggs.writes@gmail.com</a> to book. <strong>All bookings require a birth date, birth location, and exact birth time and pre-payment via Venmo</strong>. Reading this disclaimer is also required before booking.</p>
     <hr>
-    <h3>Workshops </h3>
+    <h3>Workshops</h3>
+    <h4 id="new-moon">New Moon Circle Celebrating Samhain</h4>
+    <p>Join me at Energymend for a New Moon Circle on <b>November 1st</b>, as we honor the New Moon in Scorpio and celebrate Samhain, the ancient festival marking the end of the harvest and the thinning of the veil between worlds. With Samhain (also known as the Witch’s New Year) and the Scorpio New Moon on the same day, this is a potent time to set new intentions and manifest what you desire for the upcoming month and year.</p>
+    <p>Led by Jersey Griggs, witch, astrologer, and owner of Pine Tree Magick, this event harnesses the power of the current astrological landscape using divination practices, ancestral work, guided meditation, journaling, and a manifestation ritual.</p> 
+    <p>Participants will leave armed with knowledge as to how to continue carrying this positive energy into the darkest season.</p>
+    <p><b>6pm-7:30pm</b></p>
+    <p>26 Common St <br>Saco, ME</p>
+    <p></p>
+    <p>$35 dollars</p>
+    <p>All are welcome.</p>
+    <p>Suggested Items: journal, writing utensil, and a photo of a deceased loved one.</p>
+    <p>Sign up at <a href="https://www.energy-mend.com/classes-events"><b>Energymend</b></a></p>
     <h4>New Moon Workshop</h4>
     <p>Working with the moon cycle is one of the most powerful ways to manifest your intentions. Each month, the new moon serves as a reminder of fresh beginnings and the opportunity for renewal. As our energy begins to wane, this lunar phase is the perfect time for introspection and intention setting.</p>
     <p>Join me for a 90-minute New Moon Astrology and Yoga workshop, where we will honor the current Zodiac sign through meditation, floor-based stretching, journal prompts, and chart exploration. The session will begin with a brief overview of the current astrological chart, followed by a calming meditation and gentle Yin yoga poses. Participants will then engage with journal prompts designed to help them set meaningful intentions in preparation for the new moon ritual. We will conclude the workshop with a soothing yoga nidra session, allowing everyone to fully integrate the moon’s energetic imprint.</p>
