--- a/astrology/index.html
+++ b/astrology/index.html
@@ -5,6 +5,9 @@ use_inverted_heading: true
 description: "Promote your small business by hiring a freelance copy writer who specializes in alternative health and wellness and outdoor travel and recreation."
 hero-image: "/images/astrology.webp"
 ---
+<head>
+    <meta http-equiv="refresh" content="0; url=https://www.pinetreemagick.com" />
+</head>
 <div class="text container">
   <h2 class="small">Astrology Readings</h2>
   <hr>
